# Influx-IoT-Playground

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  arduino_d1_README.md  docker-compose.yml  main.py  platformio.ini  pyproject.toml  requirements.txt  telegraf.conf.example
main-ino/src/: main.cpp
src/: main.cpp
